<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.zheft.www.zheft.ui.ChangePasswordActivity">

    <include layout="@layout/toolbar_layout"/>

    <!-- 原始密码-->
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/clickbar_default_margin"
        android:paddingRight="@dimen/clickbar_default_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickbar_default_height">
        <TextView
            style="@style/TextContentDark"
            android:text="@string/old_password"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <cn.zheft.www.zheft.view.ClearEditText
            style="@style/TextContentEdit"
            android:id="@+id/cet_old_password"
            android:hint="@string/please_input_old_pwd"
            android:inputType="textPassword"
            android:maxLength="12"
            android:digits="@string/char_password"
            android:background="@color/transparent"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <include layout="@layout/divide_line_short" />

    <!-- 设置新密码-->
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/clickbar_default_margin"
        android:paddingRight="@dimen/clickbar_default_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickbar_default_height">
        <TextView
            style="@style/TextContentDark"
            android:text="@string/new_password"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <cn.zheft.www.zheft.view.ClearEditText
            style="@style/TextContentEdit"
            android:id="@+id/cet_new_password"
            android:hint="@string/please_input_new_pwd"
            android:inputType="textPassword"
            android:maxLength="12"
            android:digits="@string/char_password"
            android:background="@color/transparent"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <include layout="@layout/divide_line_short" />

    <!-- 确认新密码-->
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/clickbar_default_margin"
        android:paddingRight="@dimen/clickbar_default_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickbar_default_height">
        <TextView
            style="@style/TextContentDark"
            android:text="@string/confirm_new_password"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <cn.zheft.www.zheft.view.ClearEditText
            style="@style/TextContentEdit"
            android:id="@+id/cet_new_password_twice"
            android:hint="@string/please_confirm_new_pwd"
            android:inputType="textPassword"
            android:maxLength="12"
            android:digits="@string/char_password"
            android:background="@color/transparent"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <include layout="@layout/divide_line_full" />

    <!-- 底色与按钮-->
    <RelativeLayout
        android:paddingTop="@dimen/button_top_margin_large"
        android:background="@color/bg_color_under"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="@style/ButtonTheme"
            android:id="@+id/btn_change_pwd"
            android:onClick="changePassword"
            android:text="@string/ensure"
            android:layout_margin="@dimen/button_default_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_default_height" />
    </RelativeLayout>
</LinearLayout>
