<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.zheft.www.zheft.ui.SetPasswordActivity">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/page_default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- 请输入密码-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_default_height">
            <ImageView
                android:id="@+id/iv_set_password"
                android:src="@mipmap/icon_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <cn.zheft.www.zheft.view.ClearEditText
                style="@style/TextContentEdit"
                android:id="@+id/cet_set_password"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:digits="@string/char_password"
                android:background="@color/transparent"
                android:paddingLeft="@dimen/input_withimg_padding"
                android:layout_toRightOf="@+id/iv_set_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
        <include layout="@layout/divide_line_full" />

        <!-- 请再次输入密码-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_default_height">
            <ImageView
                android:id="@+id/iv_set_password_twice"
                android:src="@mipmap/icon_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <cn.zheft.www.zheft.view.ClearEditText
                style="@style/TextContentEdit"
                android:id="@+id/cet_set_password_twice"
                android:hint="@string/input_password_twice"
                android:inputType="textPassword"
                android:maxLength="12"
                android:digits="@string/char_password"
                android:background="@color/transparent"
                android:paddingLeft="@dimen/input_withimg_padding"
                android:layout_toRightOf="@+id/iv_set_password_twice"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
        <include layout="@layout/divide_line_full" />
    </LinearLayout>

    <!-- 确认按钮-->
    <Button
        style="@style/ButtonTheme"
        android:id="@+id/btn_set_pwd"
        android:onClick="setPasswordOk"
        android:text="@string/ensure"
        android:layout_marginTop="@dimen/button_top_margin_large"
        android:layout_marginLeft="@dimen/button_default_margin"
        android:layout_marginRight="@dimen/button_default_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_default_height" />
</LinearLayout>
